--- a/Desktop/test/Jenkinsfile
+++ b/Desktop/test/Jenkinsfile
@@ -1,5 +1,9 @@
 pipeline{
  agent any
+
+  environment{
+   REG_CRED = credentials("reg_cred")
+  }
     
     stages {
         stage('build') {
@@ -18,10 +22,13 @@ pipeline{
                 }
             }
         }
-        stage("deploy"){
+        stage("push to registry"){
           steps{
             script{
-                sh "docker images"
+                sh "echo $REG_CRED_PSW | docker login registry.deploy.flipr.co.in -u $REG_CRED_USR --password-stdin"
+                sh "docker push registry.deploy.flipr.co.in/frontend:latest"
+                sh "docker push registry.deploy.flipr.co.in/backend:latest"
+
             }
           }
         }
